# earthservers-reclaim

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  package.json  pnpm-lock.yaml
.cargo/: config.toml
.github/workflows/: release.yml  security.yml
apps/ratings-server/migrations/: 20250122000003_add_device_fingerprint_and_independence.sql
apps/ratings-server/src/: api.rs  models.rs
apps/reclaim/: .env.development  .env.production  index.html  package.json  tailwind.config.js  vite.config.ts
apps/reclaim/.reference/earthsocial-theme/: AnimationLayer.tsx  CommunityThemeCustomizer.tsx  ConversationThemeListener.tsx  MODERATION_AND_THEME_SCOPES.md  MainNavbar.tsx  ProfileThemeCustomizer.tsx  SiteThemeCustomizer.tsx  THEME_BUTTON_STANDARDIZATION.md  THEME_CACHE_SYSTEM.md  THEME_CUSTOMIZER_GUIDE.md  ThemeBridge.tsx  ThemeContext.tsx  ThemeCustomizerButton.tsx  ThemeCustomizerModal.tsx  ThemeScope.js  ThemeScope.tsx  theme-provider.tsx  themeCache.ts  themeLoader.ts  themes.js  themes.ts  tokens.ts  useResolvedTheme.js  useResolvedTheme.ts
apps/reclaim/src/: App.tsx  index.css  main.tsx
apps/reclaim/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/reclaim/src-tauri/capabilities/: default.json  secondary.json
apps/reclaim/src-tauri/icons/: icon.icns
apps/reclaim/src-tauri/permissions/: all-app-commands.toml
apps/reclaim/src-tauri/resources/domain-lists/: academic-research.earth  education-learning.earth  education.earth  entertainment.earth  fact-checking.earth  finance-economics.earth  finance.earth  government-official.earth  government.earth  health-medical.earth  health.earth  independent-journalism.earth  local-community.earth  news-mainstream.earth  news.earth  privacy-security.earth  privacy.earth  reference-encyclopedias.earth  reference.earth  science-environment.earth  science.earth  shopping.earth  social.earth  tech-programming.earth  technology.earth
apps/reclaim/src-tauri/resources/hardened-malloc/: 99-reclaim-hardened-malloc.conf
apps/reclaim/src-tauri/src/: ai.rs  ai_lock.rs  ai_settings.rs  assets_server.rs  assistant.rs  bookmarks.rs  browser_overlay.rs  browser_surface.rs  controls_server.rs  identity.rs  knowledge_graph.rs  lib.rs  main.rs  media_downloads.rs  media_player.rs  memory.rs  multimedia.rs  privacy.rs  profile.rs  ratings.rs  research.rs  scraper.rs  search.rs  servo_browser.rs  split_view.rs  tabs.rs  theme.rs  vault.rs  video_surface.rs  webview.rs
apps/reclaim/src-tauri/src/router/: engine.rs  mod.rs  resolver.rs  url.rs
apps/reclaim/src-tauri/src/router/engines/: mod.rs  servo.rs  webkit.rs
apps/reclaim/src-tauri/src/router/resolvers/: icann_dns.rs  local_cache.rs  mod.rs  stubs.rs
apps/reclaim/src-tauri/src/search_index/: crawler.rs  curate.rs  embed.rs  gc.rs  kinds.rs  lifecycle.rs  mod.rs  orchestrator.rs  rank.rs  retention.rs  saved.rs  schema.rs  sessions.rs  store.rs
apps/reclaim/src-tauri/src/search_index/adapters/: forums.rs  mod.rs  reddit.rs  social.rs  web.rs  ytdlp.rs
apps/reclaim/src-tauri/src/security/: allocator.rs  audit.rs  curator.rs  integrity.rs  mod.rs  monitor.rs  sandbox.rs  secrets.rs
apps/reclaim/src/components/: AnimationLayer.tsx  BookmarkComponents.tsx  DomainManager.tsx  DownloadsButton.tsx  DraggableModal.tsx  FavoriteStar.tsx  HistoryViewer.tsx  IncognitoToggle.tsx  LocalAIHub.tsx  LocalSearchResults.tsx  MediaPanel.tsx  MemoryManager.tsx  NoscriptShield.tsx  NotesPlugin.tsx  OTPAuthenticator.tsx  PageLoadSpinner.tsx  PasswordManager.tsx  PrivacyButton.tsx  ProfileManager.tsx  RatingComponents.tsx  ReviewPinnedPanel.tsx  SearchControls.tsx  SearchHistoryPanel.tsx  SearchSourcesPanel.tsx  SecurityButton.tsx  SecurityCurator.tsx  SecurityMonitor.tsx  SplitView.tsx  TabBar.tsx  ThemeCustomizer.tsx  VaultAutofill.tsx  WebScraper.tsx  WebView.tsx  index.ts
apps/reclaim/src/components/EarthMultiMedia/: GStreamerPlayer.tsx  GStreamerVideoPlayer.tsx  ImageViewer.tsx  VideoPlayer.tsx  index.tsx
apps/reclaim/src/components/MediaControls/: index.tsx
apps/reclaim/src/contexts/: BrowserContext.tsx  ThemeContext.tsx
apps/reclaim/src/lib/: fsrCanvas.ts  nativeEvents.tsx  rightDock.tsx  tauri.ts  userIdentity.ts
apps/reclaim/src/mocks/: index.ts
apps/reclaim/src/theme/: tokens.ts
crates/earth-ipc/: Cargo.toml
crates/earth-ipc/src/: lib.rs
crates/earth-media/: Cargo.toml
crates/earth-media/src/: aisr.rs  enhance.rs  lib.rs  nvsr.rs  youtube.rs
crates/earth-noscript-ext/: Cargo.toml
crates/earth-noscript-ext/src/: lib.rs
crates/earth-servo/: Cargo.toml
crates/earth-servo/src/: lib.rs
docs/: development.md
resources/aisr/: README.md  realesr-x2.onnx
scripts/: build-hardened-malloc.sh  build-release.sh  gen-integrity-manifest.sh  install-ai-upscaler.sh
