[package]
name = "earth-ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "IPC utilities for Earth Reclaim inter-process communication"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
