[package]
name = "earth-servo"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Servo browser integration for Earth Reclaim"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
